# silver-engine

./: CMakeLists.txt  README.md  package.json
app/: index.d.ts  index.js
src/: Color.cpp  Image.cpp  Image.h  TypeConverter.cpp  TypeConverter.h
test/: test.ts
